analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/lateinitDestructingDeclarationWithoutInitialization.kt
// WITH_STDLIB

fun foo () {
    lateinit var (somet<caret>hing1, something2)
}